--- a/Projet Web Commerce/Views/Personnaliser/Index.cshtml
+++ b/Projet Web Commerce/Views/Personnaliser/Index.cshtml
@@ -70,7 +70,7 @@ else
     <div class="row">
         <div class="col-md-4">
             <section>
-                <form asp-route-id="@vendeur.NoVendeur" id="account" method="post" enctype="multipart/form-data">
+                <form asp-route-id="@vendeur.NoVendeur" id="customize" method="post" enctype="multipart/form-data">
                     <h2>Personnalisation de votre page</h2>
                     <div class="form-floating mb-3">
                         <h5>Votre logo</h5>
