--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -18,17 +18,22 @@
 
     foreach (PPArticlesEnPanier article in ViewBag.Panier)
     {
-        nbTotal += article.NbItems;
         var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == article.NoProduit);
-        if (item.PrixVente != null && item.DateVente > DateTime.Now)
+
+        if (item.Disponibilite == true)
         {
-            totalPrice += item.PrixVente * article.NbItems;
+            nbTotal += article.NbItems;
+            if (item.PrixVente != null && item.DateVente > DateTime.Now)
+            {
+                totalPrice += item.PrixVente * article.NbItems;
+            }
+            else
+            {
+                totalPrice += item.PrixDemande * article.NbItems;
+            }
+            totalPoids += item.Poids * article.NbItems;
         }
-        else
-        {
-            totalPrice += item.PrixDemande * article.NbItems;
-        }
-        totalPoids += item.Poids * article.NbItems;
+
     }
     decimal? tps = totalPrice * 0.05m;
     decimal? tvq = totalPrice * 0.09975m;
@@ -80,6 +85,7 @@
 
                                             var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == articles.NoProduit);
 
+                                            
                                             var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
                                             string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
                                             Console.WriteLine("FILE Name : " + item.Photo);
