--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -99,6 +99,12 @@
                                     Gestion vendeurs
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px"
+                                   asp-controller="PPCategories" asp-action="Index">
+                                    Gestion categories
+                                </a>
+                            </li>
                         }
 
                     </ul>
