--- a/Projet Web Commerce/Views/PPCategories/Delete.cshtml
+++ b/Projet Web Commerce/Views/PPCategories/Delete.cshtml
@@ -1,21 +1,11 @@
 ﻿@model Projet_Web_Commerce.Models.PPCategories
 
-@{
-    Layout = null;
-}
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
 <body>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PPCategories</h4>
+        <h2>Supprimer un Categorie</h2>
+        <h4>Êtes-vous sûr de vouloir le supprimer ?</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -33,10 +23,11 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="NoCategorie" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+            <input type="hidden" asp-for="NoCategorie" name="Id" />
+            <button type="submit" class="btn btn-danger" onclick="return confirm('Confirmer Suppression')">
+                Supprimer
+            </button> |
+            <a asp-action="Index">Retour à la liste</a>
     </form>
 </div>
 </body>
-</html>
