--- a/Projet Web Commerce/Views/PPCategories/Edit.cshtml
+++ b/Projet Web Commerce/Views/PPCategories/Edit.cshtml
@@ -1,22 +1,20 @@
 ﻿@model Projet_Web_Commerce.Models.PPCategories
 
-@{
-    Layout = null;
-}
+
 
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+    <title>Modifier un Categorie</title>
 </head>
 <body>
 
-<h4>PPCategories</h4>
+    <h2>Modifier un Categorie</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="NoCategorie" />
@@ -25,20 +23,22 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Details" class="control-label"></label>
-                <input asp-for="Details" class="form-control" />
+                <textarea asp-for="Details" class="form-control"></textarea>
                 <span asp-validation-for="Details" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Modifier" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Retour à la liste</a>
 </div>
 
 </body>
