--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px"
                                     asp-controller="PPGestionnaires" asp-action="ListeVendeurs">
-                                    Gestion vendeurs
+                                    Module Gestionnaires
                                 </a>
                             </li>
                             <li class="nav-item">
