mod envoyer msg + détails

--- a/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
@@ -12,14 +12,14 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 700px;
+        max-width: 350px;
     }
 
     .truncateDest {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 450px;
+        max-width: 200px;
     }
 
     .msg {
