--- a/Projet Web Commerce/Views/Commande/ConfirmerCommande.cshtml
+++ b/Projet Web Commerce/Views/Commande/ConfirmerCommande.cshtml
@@ -57,7 +57,7 @@
                                         <div class="row mb-4 d-flex justify-content-between align-items-center">
                                             <div class="col-md-3 col-lg-2 col-xl-9">
                                                 <div class="form-floating mb-3">
-                                                    <input asp-for="@Model.AdresseClient" class="form-control" placeholder="Veuillez entrer votre adresse courriel." />
+                                                    <input asp-for="@Model.AdresseClient" readonly class="form-control" placeholder="Veuillez entrer votre adresse courriel." />
                                                     <label asp-for="@Model.AdresseClient" class="form-label">Adresse Courriel</label>
                                                     <span asp-validation-for="@Model.AdresseClient" class="text-danger"></span>
                                                 </div>
