--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -97,7 +97,11 @@
                                             <td>@Html.DisplayFor(modelItem => item.Commande.DateCommande)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Commande.MontantTotAvantTaxes)</td>
                                             <td>
-                                                <a asp-action="FraudeV" asp-route-id="@item.Vendeur.NoVendeur">Fraude</a>
+                                                <a asp-action="FraudeV" class="btn btn-danger" asp-route-id="@item.Vendeur.NoVendeur">Fraude</a>
+                                                @if (item.Commande != null && item.Commande.NoCommande != null)
+                                                {
+                                                    <a asp-action="Taux" class="btn btn-success"  asp-route-id="@item.Vendeur.NoVendeur">Taux Redevance</a>                                                   
+                                                }
                                             </td>
                                         </tr>
                                     }
@@ -106,21 +110,7 @@
                             </table>
                         </div>
                     </div>
-                }
-                @* <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">No de vendeur</th>
-                            <th scope="col">Nom d'affaires</th>
-                            <th scope="col">Date de création</th>
-                            <th scope="col">Nb de produits inscrits</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
-                    </tbody>
-                </table> *@
+                }               
             </div>
         </section>
     </div>
