--- a/Projet Web Commerce/Views/PPGestionnaires/ListeClients.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeClients.cshtml
@@ -90,7 +90,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.VendeurClient.DateVisite)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Vendeur.NomAffaires)</td>
                                             <td>
-                                                <a asp-action="FraudeC" asp-route-id="@item.Client.NoClient">Fraude</a> 
+                                                <a asp-action="FraudeC" class="btn btn-danger" asp-route-id="@item.Client.NoClient">Fraude</a>
                                             </td>
                                         </tr>
                                     }
