--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursAConfirmer.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursAConfirmer.cshtml
@@ -41,7 +41,7 @@
                                         <p class="card-text">Date de demande : @Html.DisplayFor(modelItem => item.DateCreation)</p>
                                         <form asp-controller="MainMenu" id="frmGestionVendeur" method="post">
                                             <div class="form-floating mb-3">
-                                                <input type="number" name="Pourcentage" value="0" min="0" max="100" step="0.01" class="form-control" />
+                                                <input type="number" name="Pourcentage" value="@item.Pourcentage" min="0" max="100" step="0.01" class="form-control" />
                                                 <label class="form-label">Pourcentage (taux de redevance)</label>
                                             </div>
                                             <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
@@ -67,15 +67,15 @@
                                             '@item.Pays',
                                             '@item.Tel1',
                                             '@item.Tel2')"
-                                            class="btn btn-primary">
+                                                class="btn btn-primary">
                                             Accepter
                                         </button>
-
                                         <button href="#" onclick="courrielGestionVendeurs(false, '@item.NoVendeur')" class="btn btn-secondary">Refuser</button>
                                     </div>
                                 </div>
                             </div>
                         }
+
                     </div>
                 }
                 else
